--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
     <!-- Inicio: Navbar  100% -->
       <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">App Store</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -65,13 +65,21 @@
                     <div class="row">
                        <!-- Inicio: Contenedor 1  -->
                        <div class="col-md-6  col-sm-6">
-                       hola
+                       <img src="/Assets/Image20241216190627.png" class="w-100"  alt="">
                        </div >
                          <!-- Fin: Contenedor 1 -->
 
                          <!-- Inicio: Contenedor 2  -->
                        <div class="col-md-6  col-sm-6">
-                       hola 
+                       <div class="jumbotron">
+                        <h1 class="display-3">Jumbo heading</h1>
+                        <p class="lead">Jumbo helper text</p>
+                        <hr class="my-2">
+                        <p>More info</p>
+                        <p class="lead">
+                          <a class="btn btn-outline-danger btn-lg mt-2" href="Jumbo action link" role="button">Jumbo action name</a>
+                        </p>
+                       </div>
                        </div>
                          <!-- Fin: Contenedor  2-->
 
