--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="row">
                        <!-- Inicio: Contenedor 1  -->
                        <div class="col-md-6  col-sm-6">
-                       <img src="/Assets/Image20241216190627.png" class="w-100"  alt="">
+                       <img src="/Assets/imagen1.png" class="w-100"  alt="">
                        </div >
                          <!-- Fin: Contenedor 1 -->
 
