Diseño añ 50% del footer

--- a/index.html
+++ b/index.html
@@ -135,14 +135,41 @@
       </div>
     <!-- Fin: Container  -->
 
-     <!-- Inicio: footer-informacion    -->
-      <footer>
-                                     <!-- Inicio: Contenedor 1 5 columnas  -->
-                                    <!-- Fin: Contenedor 1 -->
-                                       <!-- Inicio: Contenedor 2 5 columnas  -->
-                                    <!-- Fin: Contenedor 2 -->
-                                     <!-- Inicio: Contenedor 3 2 columnas  -->
-                                    <!-- Fin: Contenedor 3 -->
+    <!-- Inicio: footer 100%   --> 
+      <footer class="text-center">
+         <!-- Inicio: footer-informacion    -->
+        <div class="container">
+          <div class="row">
+
+            <!-- Inicio: Contenedor 1 5 columnas  -->  
+            <div class="col-md-5 col-sm-6">
+              <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, quasi minus numquam saepe, dolorem quis iure quam nulla repudiandae ratione necessitatibus quibusdam. Alias debitis adipisci earum incidunt expedita, quasi hic?</p>
+           <!-- Fin: Contenedor 1 -->
+            </div>
+           
+           <!-- Inicio: Contenedor 2 5 columnas  -->
+            <div class="col-md-5 col-sm-6"> 
+            <!-- Fin: Contenedor 2 -->
+            </div>
+
+           <!-- Inicio: Contenedor 3 2 columnas  -->
+            <div class="col-md-2 col-sm-6">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-youtube"></i>
+             <!-- Fin: Contenedor 3 -->
+            </div>
+
+
+
+          </div>
+
+        </div>
+        
+        <div class="col-md-12">
+        <p class="text-muted"> Copryrigth 2024 VLA Front L-m</p>
+        </div>
         <!-- Fin: footer-mensaje -->
         <!-- Inicio: footer-mensaje    -->
                                      <!-- Inicio: Contenedor 1 12 columnas  -->
